fixed summary spacing

--- a/css/accordion.css
+++ b/css/accordion.css
@@ -24,7 +24,7 @@
 
 /* Accordion details */
 .accordion details {
-    margin: 1em;
+    margin: 0.5rem;
     width: 100%;
     max-width: 900px;
     overflow: hidden;
@@ -38,6 +38,7 @@
 
 .accordion details[open] {
     max-width: 95%;
+    margin: 2rem 0;
     transition: max-width 0.5s ease;
     border: 1px solid #333;
 }
